--- a/PS7/18.100A_ps7.tex
+++ b/PS7/18.100A_ps7.tex
@@ -115,6 +115,18 @@ which is only satisfied for $x=0$. Thus, $\sum_n n! x^n$ converges only for $x=0
 	\end{equation}
 	as desired.
 \end{proof}
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Problem 4}
+\begin{proof}
+	Let $x \in \R$ and let $\epsilon > 0$. 
+	
+	Consider the set $(x - \epsilon, x + \epsilon)$. We already showed that $\forall x,\;y \in \R$ with $x < y$, $\exists z \in \R \backslash \Q$ such that $x < z < y$.
+	
+	Thus $\forall x \in \R$ and for every $\epsilon > 0$,
+	\begin{equation}
+		(x - \epsilon, x + \epsilon) \cap (\R \backslash \Q) \backslash \{x\} \neq \varnothing.
+	\end{equation}
+	Therefore, every real number is a cluster point of the irrationals.
+\end{proof}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
