--- a/PS8/18.100A_ps8.tex
+++ b/PS8/18.100A_ps8.tex
@@ -72,5 +72,20 @@
 	\end{align}
 	Therefore, $f$ is discontinuous at $x = 1$.
 \end{proof}
-	
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Problem 3}
+\begin{proof}
+	Since $f$ is continuous at $c$, then $\forall \epsilon > 0 $, $\exists \delta > 0$ such that if $|x - c| < \delta$, then $|f(x) - f(c)| < \epsilon$, i.e.
+	\begin{equation}
+		f(c) - \epsilon < f(x) < f(c) + \epsilon.
+	\end{equation}
+	Let $\epsilon = \frac{f(c)}{2}$. Then for some $\delta > 0$,
+	\begin{equation}
+		0 < \frac{f(c)}{2} < f(x) < \frac{3 f(c)}{2}.
+	\end{equation}
+	Simply choose $\alpha = \delta$, and we are done.
+\end{proof}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 \end{document}
