--- a/PS9/18.100A_ps9.tex
+++ b/PS9/18.100A_ps9.tex
@@ -39,5 +39,17 @@
 	
 	Hence $f(x) = \arctan(x)$ does not achieve an absolute minimum or maximum.
 \end{proof}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Problem 2}
+\begin{proof}
+	Let $x, y \in (c, \infty)$. Choose $L = \frac{1}{c^2}$. Then
+	\begin{align}
+		|f(y) - f(x)| &= \big|\frac{1}{y} - \frac{1}{x}\big| \\
+		&= \frac{|x - y|}{xy} \\
+		&< \frac{|x - y|}{c^2} \\
+		&= L |x - y|.
+	\end{align}
+	Therefore $f(x) = \frac{1}{x}$ is Lipschitz continuous.
+\end{proof}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
