--- a/PS9/18.100A_ps9.tex
+++ b/PS9/18.100A_ps9.tex
@@ -84,4 +84,39 @@
 	Thus $f$ is uniformly continuous on $S$. 
 \end{proof}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Problem 5}
+(a) \begin{proof}
+	Let $x, y \in \R$. Choose $L = 1$. Then
+	\begin{align}
+		|f(x) - f(y)| &= |\cos(x) - \cos(y)| \\
+		&= \Big|2 \sin\left(\frac{x + y}{2}\right) \sin\left(\frac{x - y}{2}\right)\Big| \\
+		& \leq 2 \Big|\sin\left(\frac{x - y}{2}\right)\Big| \\
+		& \leq 2 \Big|\frac{x - y}{2}\Big| \\
+		&= |x - y|.
+	\end{align}
+	Therefore $f(x) = \cos(x)$ is Lipschitz continuous on $\R$.
+\end{proof}
+
+(b) \begin{proof}
+	(1) Let $\epsilon > 0$. Choose $\delta = c^{\frac{2}{3}} \epsilon$. Then $\forall x, c \in [0, 1]$, we have
+	\begin{align}
+		|f(x) - f(c)| &= |x^{\frac{1}{3}} - c^{\frac{1}{3}}| \\
+		&= \frac{|x - c|}{|x^{\frac{2}{3}} + x^{\frac{1}{3}}c^{\frac{1}{3}} + c^{\frac{2}{3}}|} \\
+		&< \frac{\delta}{c^{\frac{2}{3}}} \\
+		&= \epsilon.
+	\end{align}
+	Thus, $f(x) = x^{\frac{1}{3}}$ is uniformly continuous on $[0, 1]$.
+	
+	(2) (By contradiction.)
+	
+	Suppose $f$ is Lipschitz continuous on $[0, 1]$. Then $\forall x, y \in [0, 1]$, $\exists L \geq 0$ such that $|x^{\frac{1}{3}} - y^{\frac{1}{3}}| \leq L |x - y|$.
+	
+	Choose $y = 0$. Then $|x^{\frac{1}{3}}| \leq L |x|$, i.e. $\frac{1}{x^{\frac{2}{3}}} \leq L$. Taking $x \to 0$ on both sides, this implies that $\lim\limits_{x \to 0} \frac{1}{x^{\frac{2}{3}}}$ exists and is finite. But we know that this limit does not exist, so we have arrived at a contradiction.
+	
+	Therefore $f(x) = x^{\frac{1}{3}}$ is not Lipschitz continuous on $[0, 1]$.
+\end{proof}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
 \end{document}
