--- a/PS12/18.100A_ps12.tex
+++ b/PS12/18.100A_ps12.tex
@@ -59,5 +59,17 @@
 	\end{equation}
 	and by part \textbf{(a)}, this implies that $(u')^2 = 0$  $\forall x \in [a, b]$. Hence $u'(x) = 0$ for all $x$, and since $u(a) = 0$, then $u$ remains constant at $0$; i.e. $u = 0$ everywhere.
 \end{proof}
-	
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Problem 2}
+We compute:
+\begin{align}
+	\int_{-x}^x e^{s^2} \mathrm{d}s &= \int_{-x}^{0}e^{s^2} \mathrm{d}s + \int_{0}^{x}e^{s^2} \mathrm{d}s \\
+	&= \int_{0}^{x}e^{s^2} \mathrm{d}s - \int_{0}^{-x}e^{s^2} \mathrm{d}s.
+\end{align}
+Differentiating, we get
+\begin{align}
+	\frac{\mathrm{d}}{\mathrm{d}x}\left(\int_{-x}^x e^{s^2} \mathrm{d}s\right) &= \frac{\mathrm{d}}{\mathrm{d}x}\left(\int_{0}^{x}e^{s^2}\right) - \frac{\mathrm{d}}{\mathrm{d}x}\left(\int_{0}^{-x}e^{s^2}\right) \\
+	&= e^{x^2} + e^{x^2}.
+\end{align}
+Thus $\frac{\mathrm{d}}{\mathrm{d}x}\left(\int_{-x}^x e^{s^2} \mathrm{d}s\right) = 2e^{x^2}$.
 \end{document}
