--- a/final/18.100A_final.tex
+++ b/final/18.100A_final.tex
@@ -27,10 +27,19 @@
 \date\today
 
 \begin{document}
-	\maketitle
+\maketitle
 	
 \section*{Problem 1}
 We complete the following \textbf{negations}:
 \subsection*{(i)}
+Let $S \subset \R$. A function $f: S \to \R$ is \textbf{not continuous} at $c \in S$ if $\exists \epsilon_0 > 0$ such that $\forall \delta > 0$ if $|x - c| < \delta$, $|f(x) - f(c)| \geq \epsilon_0$.
+
+\subsection*{(ii)}
+Let $S \subset \R$. A function $f: S \to \R$ is \textbf{not uniformly continuous} on $S$ if $\exists x_0 \in S$ such that $\forall \delta > 0$ $\exists \epsilon_0 > 0$ such that if $|x_0 - x| < \delta$, then $|f(x) - f(x_0)| \geq \epsilon_0$.
+
+\subsection*{(iii)}
+Let $S \subset \R$. A sequence of functions $f_n: S \to \R$ \textbf{does not converge uniformly} to $f: S \to \R$ if $\exists \epsilon_0 > 0$ such that $\forall M \in \N$ $\exists n \geq M$ and $x \in S$ such that $|f_n(x) - f(x)| \geq \epsilon_0$.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{Problem 2}
 
 \end{document}
